--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -23,7 +24,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "expo-app-loading": "~1.3.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
